--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 dependencies = [
     "fastapi[standard]>=0.115.4",
+    "sqlmodel>=0.0.22",
 ]
 requires-python = "==3.10.*"
 readme = "README.md"
